--- a/webapps/views/index.ejs
+++ b/webapps/views/index.ejs
@@ -1,12 +1,15 @@
 <!doctype html>
 <head>
 	<title>Dashboard</title>
+	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 	<script src="jquery.js"></script>
 	<script src="script.js"></script>
+	<script src="index.js"></script>
 	<script src="bootstrap.min.js"></script>
 	<link rel="stylesheet" href="bootstrap.min.css" />
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="material.min.css">
+	<link rel="stylesheet" href="map.css">
 	<script src="material.min.js"></script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<script type="text/javascript">
@@ -30,6 +33,9 @@
 	}(document, 'script', 'facebook-jssdk'));</script>
 	<% include navbar.ejs %>
 	<% include popup.ejs %>
-
+	<div id="map"></div>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOALyWOCCU8aeFjZkBGEKywc9VnSQlg74&callback=initMap">
+    </script>
 </body>
 </html>
