--- a/webapps/views/navbar.ejs
+++ b/webapps/views/navbar.ejs
@@ -7,7 +7,7 @@ mdl-layout--fixed-header">
       <a class="mdl-navigation__link" href="">Link</a>
       <a class="mdl-navigation__link" href="">Link</a>
       <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href=""><div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false"></div></a>
+      <a class="mdl-navigation__link" href=""><div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false" ></div></a>
     </nav>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
     mdl-textfield--floating-label mdl-textfield--align-right">
@@ -31,7 +31,9 @@ mdl-layout--fixed-header">
     <a class="mdl-navigation__link" href="">Link</a>
   </nav>
 </div>
-<main class="mdl-layout__content">
-  <div class="page-content"><!-- Your content goes here --></div>
-</main>
+  <main class="mdl-layout__content">
+    <div class="page-content">
+      <div id="map"></div>
+    </div>
+  </main>
 </div>
