--- a/webapps/views/navbar.ejs
+++ b/webapps/views/navbar.ejs
@@ -7,7 +7,6 @@ mdl-layout--fixed-header">
       <a class="mdl-navigation__link" href="">Link</a>
       <a class="mdl-navigation__link" href="">Link</a>
       <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href=""><div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false" ></div></a>
     </nav>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
     mdl-textfield--floating-label mdl-textfield--align-right">
@@ -25,10 +24,10 @@ mdl-layout--fixed-header">
 <div class="mdl-layout__drawer">
   <span class="mdl-layout-title">Travelytics</span>
   <nav class="mdl-navigation">
+    <a class="mdl-navigation__link" href="">Plan Trip</a>
+    <a class="mdl-navigation__link" href="">My Locations</a>
     <a class="mdl-navigation__link" href="">Link</a>
-    <a class="mdl-navigation__link" href="">Link</a>
-    <a class="mdl-navigation__link" href="">Link</a>
-    <a class="mdl-navigation__link" href="">Link</a>
+    <a class="mdl-navigation__link" href=""><div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true" data-scope="user_tagged_places"></div></a>
   </nav>
 </div>
   <main class="mdl-layout__content">
