fb users and locations stored to db

--- a/webapps/views/index.ejs
+++ b/webapps/views/index.ejs
@@ -29,29 +29,35 @@
 </head>
 <body>
 	<script>
-	  window.fbAsyncInit = function() {
-	    FB.init({
-	      appId      : '1015336085244830',
-	      xfbml      : true,
-	      version    : 'v2.8'
-	    });
-	  };
+	var places, friends;
+	window.fbAsyncInit = function() {
+		FB.init({
+			appId      : '1015336085244830',
+			xfbml      : true,
+			version    : 'v2.0'
+		});
+		FB.Event.subscribe('auth.login', function(response){
+			console.log(response.status);
+			console.log(response);
+			set_username();
+		});
+	};
 
-	  (function(d, s, id){
-	     var js, fjs = d.getElementsByTagName(s)[0];
-	     if (d.getElementById(id)) {return;}
-	     js = d.createElement(s); js.id = id;
-	     js.src = "//connect.facebook.net/en_US/sdk.js";
-	     fjs.parentNode.insertBefore(js, fjs);
-	   }(document, 'script', 'facebook-jssdk'));
+	(function(d, s, id){
+		var js, fjs = d.getElementsByTagName(s)[0];
+		if (d.getElementById(id)) {return;}
+		js = d.createElement(s); js.id = id;
+		js.src = "//connect.facebook.net/en_US/sdk.js";
+		fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));
 
-		 function test(){
-			 FB.api('/me/tagged_places', 'get', (data)=>{console.log(data)});
-		 }
+	function test(){
+		FB.api('/me/tagged_places', 'get', (data)=>{console.log(data)});
+	}
 
-		 function test2(){
-			 FB.api("/me/friends", "GET", (data)=>{console.log(data);})
-		 }
+	function test2(){
+		FB.api("/me/friends", "GET", (data)=>{console.log(data);})
+	}
 	</script>
 	<% include navbar.ejs %>
 	<% include popup.ejs %>
