--- a/webapps/views/navbar.ejs
+++ b/webapps/views/navbar.ejs
@@ -4,9 +4,7 @@ mdl-layout--fixed-header">
   <div class="mdl-layout__header-row">
     <div class="mdl-layout-spacer"></div>
     <nav class="mdl-navigation mdl-layout--large-screen-only">
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
-      <a class="mdl-navigation__link" href="">Link</a>
+      <a class="mdl-navigation__link" id="username"></a>
     </nav>
     <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
     mdl-textfield--floating-label mdl-textfield--align-right">
@@ -25,9 +23,8 @@ mdl-layout--fixed-header">
   <span class="mdl-layout-title">Travelytics</span>
   <nav class="mdl-navigation">
     <a class="mdl-navigation__link" href="">Plan Trip</a>
-    <a class="mdl-navigation__link" href="">My Locations</a>
-    <a class="mdl-navigation__link" href="">Link</a>
-    <a class="mdl-navigation__link" href=""><div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true" data-scope="user_tagged_places"></div></a>
+    <a class="mdl-navigation__link" onclick="my_location()">My Locations</a>
+    <a class="mdl-navigation__link" href=""><div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true" data-scope="user_tagged_places,user_friends"></div></a>
   </nav>
 </div>
   <main class="mdl-layout__content">
