fixing  the login sequence

--- a/webapps/views/index.ejs
+++ b/webapps/views/index.ejs
@@ -24,34 +24,37 @@
 			document.getElementById("map").style.position = "static";
 			google.maps.event.trigger(document.getElementById("map"), 'resize');
 		}, 1000);
+
+		(function(d, s, id){
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) {return;}
+			js = d.createElement(s); js.id = id;
+			js.src = "//connect.facebook.net/en_US/sdk.js";
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+
+		window.fbAsyncInit = function() {
+			FB.init({
+				appId      : '1015336085244830',
+				xfbml      : true,
+				version    : 'v2.0'
+			});
+
+			FB.getLoginStatus(function(response){
+				FB.Event.subscribe('auth.login', function(response){
+					set_username();
+					put_url_data();
+					console.log(response.status);
+					console.log(response);
+				});
+			});
+		};
 	})
 	</script>
 </head>
 <body>
 	<script>
-	var places, friends;
-	window.fbAsyncInit = function() {
-		FB.init({
-			appId      : '1015336085244830',
-			xfbml      : true,
-			version    : 'v2.0'
-		});
-		FB.Event.subscribe('auth.login', function(response){
-			console.log(response.status);
-			console.log(response);
-			set_username();
-		});
-	};
-
-	(function(d, s, id){
-		var js, fjs = d.getElementsByTagName(s)[0];
-		if (d.getElementById(id)) {return;}
-		js = d.createElement(s); js.id = id;
-		js.src = "//connect.facebook.net/en_US/sdk.js";
-		fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));
-
-	function test(){
+		function test(){
 		FB.api('/me/tagged_places', 'get', (data)=>{console.log(data)});
 	}
 
