--- a/webapps/views/index.ejs
+++ b/webapps/views/index.ejs
@@ -5,6 +5,7 @@
 	<script src="jquery.js"></script>
 	<script src="script.js"></script>
 	<script src="index.js"></script>
+	<script src="distance.js"></script>
 	<script src="bootstrap.min.js"></script>
 	<link rel="stylesheet" href="bootstrap.min.css" />
 	<link rel="stylesheet" href="style.css" />
