adding url extractor

--- a/webapps/views/navbar.ejs
+++ b/webapps/views/navbar.ejs
@@ -22,7 +22,7 @@ mdl-layout--fixed-header">
 <div class="mdl-layout__drawer">
   <span class="mdl-layout-title">Travelytics</span>
   <nav class="mdl-navigation">
-    <a class="mdl-navigation__link" href="">Plan Trip</a>
+    <a class="mdl-navigation__link" onclick="plan_trip_form()">Plan Trip</a>
     <a class="mdl-navigation__link" onclick="my_location()">My Locations</a>
     <a class="mdl-navigation__link" href=""><div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true" data-scope="user_tagged_places,user_friends"></div></a>
   </nav>
