--- a/webapps/views/navbar.ejs
+++ b/webapps/views/navbar.ejs
@@ -2,6 +2,20 @@
 mdl-layout--fixed-header">
 <header class="mdl-layout__header">
   <div class="mdl-layout__header-row">
+    <!-- Left aligned menu below button -->
+    <button id="demo-menu-lower-left"
+    class="mdl-button mdl-js-button mdl-button--icon">
+    <i class="material-icons">more_vert</i>
+  </button>  Places in San Francisco
+
+  <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
+  for="demo-menu-lower-left">
+  <li class="mdl-menu__item">Some Action</li>
+  <li class="mdl-menu__item mdl-menu__item--full-bleed-divider">Another Action</li>
+  <li disabled class="mdl-menu__item">Disabled Action</li>
+  <li class="mdl-menu__item">Yet Another Action</li>
+  </ul>
+
     <div class="mdl-layout-spacer"></div>
     <nav class="mdl-navigation mdl-layout--large-screen-only">
       <a class="mdl-navigation__link" id="username"></a>
@@ -26,10 +40,12 @@ mdl-layout--fixed-header">
     <a class="mdl-navigation__link" onclick="my_location()">My Locations</a>
     <a class="mdl-navigation__link" href=""><div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true" data-scope="user_tagged_places,user_friends"></div></a>
   </nav>
+    <nav class="mdl-navigation" id="trip_switcher"></nav>
 </div>
   <main class="mdl-layout__content">
     <div class="page-content">
       <div id="map"></div>
     </div>
   </main>
+</div>
 </div>
