--- a/webapps/views/navbar.ejs
+++ b/webapps/views/navbar.ejs
@@ -15,13 +15,13 @@ mdl-layout--fixed-header">
   </span>
 
     <span id="places_in_itinenary" style="display:none">
-    <button id="demo-menu-lower-left"
+    <button id="demo-menu-lower-left_"
     class="mdl-button mdl-js-button mdl-button--icon">
     <i class="material-icons">more_vert</i>
   </button> Itinerary
 
   <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
-  for="demo-menu-lower-left" id="place_itinenary">
+  for="demo-menu-lower-left_" id="place_itinenary">
   </ul>
   </span>
 
